--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,6 +1,6 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --vt-c-white: #00ffaa;
+  --vt-c-white: #000503;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
